# invoiceflow

./: .gitignore  .prettierignore  .prettierrc.json  .vercelignore  Anchor.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
app/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/invoices/: route.ts
app/src/app/api/webhook/: route.ts
app/src/app/create/: page.tsx
app/src/app/invoice/[address]/: page.tsx
app/src/components/: ArbiterModal.tsx  CashOutModal.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  RaenestPayoutModal.tsx  Skeleton.tsx  StatusBadge.tsx
app/src/idl/: invoiceflow.json  invoiceflow.ts
app/src/lib/: constants.ts  hash.ts  metadata.ts  program.ts
app/src/lib/indexer/: db.ts  fetcher.ts  repository.ts  schema.sql  types.ts
migrations/: deploy.ts
programs/invoiceflow/: Cargo.toml
programs/invoiceflow/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  util.rs
programs/invoiceflow/src/instructions/: approve_milestone.rs  arbiter_resolve.rs  auto_release.rs  cancel_invoice.rs  create_invoice.rs  fund_invoice.rs  initialize_config.rs  mod.rs  raise_dispute.rs  request_raenest_payout.rs  resolve_dispute.rs  update_config.rs
scripts/: backfill-indexer.ts  init-protocol.ts  migrate-indexer.ts  smoke-devnet.ts
tests/: invoiceflow.ts
